Syncing with my configs

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -8,8 +8,7 @@ alias highquality "exec ./gfx/highquality"
 alias maxquality "exec ./gfx/maxquality"
 alias m0refps "exec ./gfx/m0refps"
 alias m0rehighfps "exec ./gfx/m0rehighfps"
-highframes
-//exec ./okai/cfg
+maxframes
 
 //Protection, no pinion
 exec ./okai/protection
@@ -50,10 +49,17 @@ alias sniper_cfg "alias reload_cfg sniper;       exec ./okai/pre; exec ./okai/sn
 alias spy_cfg "alias reload_cfg spy;             exec ./okai/pre; exec ./okai/spy"
 // -------------------------------------------------------
 
-//Practising
+//Practising/aliases
 // -------------------------------------------------------
 alias aim "map tr_aim"
 alias walkway "map tr_walkway_rc2"
+alias dc disconnect
+alias +ammo "+attack;impulse 101"
+alias -ammo "-attack"
+alias ammo "bind mouse1 +ammo"
+alias personswitch 1stperson
+alias 1stperson "tp; alias personswitch 3rdperson"
+alias 3rdperson "fp; alias personswitch 1stperson"
 // -------------------------------------------------------
 
 //Crosshairs
@@ -76,7 +82,7 @@ hud_combattext 1
 tf_dingalingaling 1
 closecaption 1
 net_graph 1
-net_graphheight 20
+net_graphheight 830
 net_graphpos 3
 r_3dsky 1
 cl_showfps 1
@@ -86,15 +92,18 @@ cl_autoreload 1
 cl_autorezoom 0
 hud_medicautocallers 1
 volume 0.1
-fps_max 120
 jpeg_quality 100
 cl_hud_minmode 1
 cl_use_tournament_specgui 1
 cl_crosshair_scale 28
 hud_classautokill 0
+tf_colorblindassist 1
+cc_predisplay_time 0
 defaultxhair
 tf_dingaling_pitchmaxdmg 97
 tf_dingaling_pitchmindmg 120
+hud_combattext_batching 1
+cl_downloadfilter "mapsonly"
 //Hitsound Dog
 //tf_dingaling_pitchmaxdmg 30
 //tf_dingaling_pitchmindmg 90
@@ -167,36 +176,32 @@ alias bhop_alias "alias bhop_jump bhop_bind"
 alias bhop_stop "alias bhop_jump"
 alias +bhop "bhop_alias; bhop_jump"
 alias -bhop "bhop_stop; -jump"
+
 alias wheelhop "bind mwheelup +jump; bind mwheeldown +jump"
 // -------------------------------------------------------
 
-//Jailbreak stuff
+//Voice Toggle
 // -------------------------------------------------------
-//Remove RED ammo
-alias remove_red_ammo "sm_setclip @red 1 0; sm_setclip @red 2 0; sm_setammo @red 1 0; sm_setammo @red 2 0; cc_emit #red.ammo.remove"
-//Remove BLU ammo
-alias remove_blu_ammo "sm_setclip @blue 1 0; sm_setclip @blue 2 0; sm_setammo @blue 1 0; sm_setammo @blue 2 0; cc_emit #blu.ammo.remove"
-//Switching between 1st and 3rd person
-alias personswitch 1stperson
-alias 1stperson "tp; alias personswitch 3rdperson"
-alias 3rdperson "fp; alias personswitch 1stperson"
+alias voice_toggle "voice_on"
+alias voice_on "voice_scale 1; voice_modenable 1; echo nigga; alias voice_toggle voice_off"
+alias voice_off "voice_scale 0; voice_modenable 0; echo nigga2; alias voice_toggle voice_on"
 // -------------------------------------------------------
 
 //Grab server info
 // -------------------------------------------------------
 alias sm_help_cycle sm_help_0
 alias sm_help_0  "sm_help; alias sm_help_cycle sm_help_1"
-alias sm_help_1  "sm_help 1; alias sm_help_cycle sm_help_2"
-alias sm_help_2  "sm_help 2; alias sm_help_cycle sm_help_3"
-alias sm_help_3  "sm_help 3; alias sm_help_cycle sm_help_4"
-alias sm_help_4  "sm_help 4; alias sm_help_cycle sm_help_5"
-alias sm_help_5  "sm_help 5; alias sm_help_cycle sm_help_6"
-alias sm_help_6  "sm_help 6; alias sm_help_cycle sm_help_7"
-alias sm_help_7  "sm_help 7; alias sm_help_cycle sm_help_8"
-alias sm_help_8  "sm_help 8; alias sm_help_cycle sm_help_9"
-alias sm_help_9  "sm_help 9; alias sm_help_cycle sm_help_10"
-alias sm_help_10 "sm_help 10; alias sm_help_cycle sm_help_11"
-alias sm_help_11 "sm_help 11; alias sm_help_cycle sm_help_0"
+alias sm_help_1  "sm_help_cycle; sm_help 1; alias sm_help_cycle sm_help_2"
+alias sm_help_2  "sm_help_cycle; sm_help 2; alias sm_help_cycle sm_help_3"
+alias sm_help_3  "sm_help_cycle; sm_help 3; alias sm_help_cycle sm_help_4"
+alias sm_help_4  "sm_help_cycle; sm_help 4; alias sm_help_cycle sm_help_5"
+alias sm_help_5  "sm_help_cycle; sm_help 5; alias sm_help_cycle sm_help_6"
+alias sm_help_6  "sm_help_cycle; sm_help 6; alias sm_help_cycle sm_help_7"
+alias sm_help_7  "sm_help_cycle; sm_help 7; alias sm_help_cycle sm_help_8"
+alias sm_help_8  "sm_help_cycle; sm_help 8; alias sm_help_cycle sm_help_9"
+alias sm_help_9  "sm_help_cycle; sm_help 9; alias sm_help_cycle sm_help_10"
+alias sm_help_10 "sm_help_cycle; sm_help 10; alias sm_help_cycle sm_help_11"
+alias sm_help_11 "sm_help_cycle; sm_help 11; alias sm_help_cycle sm_help_0"
 
 alias sm_plugins_cycle sm_plugins_00
 alias sm_plugins_00 "sm plugins; alias sm_plugins_cycle sm_plugins_11"
@@ -270,5 +275,9 @@ echo "                      Code support                     "
 println
 r_3dnow
 r_sse2
+println
+echo "                      Sound info                       "
+println
+soundinfo
 println
 // -------------------------------------------------------
