--- a/cfg/gfx/maxframes.cfg
+++ b/cfg/gfx/maxframes.cfg
@@ -348,3 +348,5 @@ echo "            Chris' maxframes config loaded.            "
 echo "-------------------------------------------------------"
 echo "Please direct all comments/queries/whatnot to"
 echo "#christf2 on QuakeNet."
+
+exec ./gfx/post_maxframes
