--- a/cfg/okai/demoknight.cfg
+++ b/cfg/okai/demoknight.cfg
@@ -29,6 +29,7 @@ joy_accelmax 0
 joy_response_move 0
 joy_response_look 1
 joyadvancedupdate
+joy_axis_deadzone 0
 
 +jlook
 
@@ -37,5 +38,6 @@ joy_yawthreshold 0
 joy_lowend 1
 joy_lowmap 1
 
-alias demoknight_on "bind mouse2 +m2"
-alias demoknight_off "bind mouse2 +attack2"
+alias demoknight_toggle demoknight_on
+alias demoknight_on "bind mouse2 +m2; alias demoknight_toggle demoknight_off; cc_emit #demoknight.on"
+alias demoknight_off "bind mouse2 +attack2; alias demoknight_toggle demoknight_on; cc_emit #demoknight.off"
