--- a/cfg/okai/demoman.cfg
+++ b/cfg/okai/demoman.cfg
@@ -5,10 +5,11 @@ exec ./okai/demoman_aliases
 exec ./okai/demoknight
 
 //Console variables that can change
-viewmodel_fov 105
+viewmodel_fov 90
 sensitivity 3.59
 cl_autoreload 1
 r_drawviewmodel 0
+cl_interp .0152
 
 //No demoknighting
 demoknight_off
