--- a/cfg/okai/demoman_binds.cfg
+++ b/cfg/okai/demoman_binds.cfg
@@ -25,13 +25,13 @@ bind "r" "+reload"
 bind "t" "impulse 201"
 bind "y" "say"
 bind "u" "say_team"
-bind "i" ""
+bind "i" "say Well played!"
 bind "o" ""
 bind "p" ""
 bind "a" "+moveleft"
 bind "s" "+back"
 bind "d" "+moveright"
-bind "f" ""
+bind "f" "demoknight_toggle"
 bind "g" "+taunt"
 bind "h" "+use_action_slot_item"
 bind "j" "prec_mark"
@@ -51,7 +51,7 @@ bind "ESCAPE" "cancelselect"
 bind "`" "toggleconsole"
 bind "TAB" "+showgraph"
 bind "CAPSLOCK" ""
-bind "SHIFT" "+qwep"
+bind "SHIFT" ""
 bind "CTRL" "+duck"
 bind "ALT" ""
 
@@ -112,8 +112,8 @@ bind "F12" "toggle r_drawviewmodel"
 //The keys above arrows
 bind "INS" "wait_check" // Insert
 bind "HOME" "remove_red_ammo" // Home
-bind "PGUP" "" // Page Up
-bind "DEL" "" // Delete
+bind "PGUP" "reload_cfg" // Page Up
+bind "DEL" "voice_toggle" // Delete
 bind "END" "" // End
 bind "PGDN" "" // Page Down
 bind "NUMLOCK" "" // Pause Break/numlock
