--- a/cfg/okai/heavyweapons.cfg
+++ b/cfg/okai/heavyweapons.cfg
@@ -6,6 +6,7 @@ viewmodel_fov 90
 sensitivity 3.59
 cl_autoreload 1
 r_drawviewmodel 1
+cl_interp .033
 
 //Executing the binds
 exec ./okai/heavyweapons_binds
