--- a/cfg/okai/medic.cfg
+++ b/cfg/okai/medic.cfg
@@ -2,10 +2,11 @@
 exec ./okai/medic_aliases
 
 //Console variables that can change
-viewmodel_fov 105
+viewmodel_fov 90
 sensitivity 3.59
 cl_autoreload 1
 r_drawviewmodel 1
+cl_interp .033
 
 //Autoheal on
 autoheal_1
