--- a/cfg/okai/medic_binds.cfg
+++ b/cfg/okai/medic_binds.cfg
@@ -1,8 +1,8 @@
 //Slots
 bind "0" "slot10"
-bind "1" "-attack; slot1; autoheal.slot.1"
-bind "2" "slot2; autoheal.slot.2"
-bind "3" "-attack; slot3; autoheal.slot.1"
+bind "1" "medic_slot_1"
+bind "2" "medic_slot_2"
+bind "3" "medic_slot_3"
 bind "4" "slot4"
 bind "5" "slot5"
 bind "6" "slot6"
@@ -25,13 +25,13 @@ bind "r" "+reload"
 bind "t" "impulse 201"
 bind "y" "say"
 bind "u" "say_team"
-bind "i" ""
+bind "i" "say Well played!"
 bind "o" ""
 bind "p" ""
 bind "a" "+moveleft"
 bind "s" "+back"
 bind "d" "+moveright"
-bind "f" ""
+bind "f" "fakeuber"
 bind "g" "+taunt"
 bind "h" "+use_action_slot_item"
 bind "j" "prec_mark"
@@ -112,8 +112,8 @@ bind "F12" "toggle r_drawviewmodel"
 //The keys above arrows
 bind "INS" "wait_check" // Insert
 bind "HOME" "remove_red_ammo" // Home
-bind "PGUP" "" // Page Up
-bind "DEL" "" // Delete
+bind "PGUP" "reload_cfg" // Page Up
+bind "DEL" "voice_toggle" // Delete
 bind "END" "" // End
 bind "PGDN" "" // Page Down
 bind "NUMLOCK" "" // Pause Break/numlock
