--- a/cfg/okai/pyro.cfg
+++ b/cfg/okai/pyro.cfg
@@ -2,10 +2,11 @@
 exec ./okai/pyro_aliases
 
 //Console variables that can change
-viewmodel_fov 105 
+viewmodel_fov 90
 sensitivity 3.59
 cl_autoreload 1
 r_drawviewmodel 0
+cl_interp .033
 
 //Executing the binds
 exec ./okai/pyro_binds
