--- a/cfg/okai/spy.cfg
+++ b/cfg/okai/spy.cfg
@@ -5,7 +5,8 @@ exec ./okai/spy_aliases
 viewmodel_fov 90
 sensitivity 3.59
 cl_autoreload 0
-r_drawviewmodel 1
+r_drawviewmodel 0
+cl_interp .015
 
 //No stabby configs
 stabby_0
