--- a/cfg/okai/stabbyspy.cfg
+++ b/cfg/okai/stabbyspy.cfg
@@ -36,7 +36,7 @@ alias -equip_amby "amby_vm_mode" // Sets viewmodels to turn OFF when shooting
 alias +equip_sap "slot2;r_drawviewmodel 1" // Equips sapper, turns viewmodels on
 alias -equip_sap "sap_vm_mode" // Sets viewmodels to turn on while firing, and offf when not
 
-alias +watch "+attack2;r_drawviewmodel 1" // watch up/cloak on/secondary attack + viewmodels on
-alias -watch "-attack2;r_drawviewmodel 1" // viewmodels on again as safeguard
+//alias +watch "+attack2;r_drawviewmodel 1" // watch up/cloak on/secondary attack + viewmodels on
+//alias -watch "-attack2;r_drawviewmodel 1" // viewmodels on again as safeguard
   
 echo "Viewmodel script loaded" // confirms script loaded in the console
