--- a/cfg/okai/autoheal_on.cfg
+++ b/cfg/okai/autoheal_on.cfg
@@ -1,9 +1,103 @@
-alias +rattack -attack
-alias -rattack +attack
+alias +rev_attack "-attack"
+alias -rev_attack +attack"
 
-alias autoheal.slot.1 "bind mouse1 +attack"
-alias autoheal.slot.2 "bind mouse1 +rattack; +attack"
+alias autoheal_slot_1 "bind mouse1 +attack; bind mouse2 +attack2"
+alias autoheal_slot_2 "bind mouse1 +rev_attack; +attack; bind mouse2 +uberpop"
+alias autoheal_slot_3 "bind mouse1 +attack; bind mouse2 +attack2"
 
-bind "1" "-attack; slot1; autoheal.slot.1"
-bind "2" "slot2; autoheal.slot.2"
-bind "3" "-attack; slot3; autoheal.slot.1"
+alias medic_slot_1 "-attack; slot1; autoheal_slot_1"
+alias medic_slot_2 "slot2; autoheal_slot_2"
+alias medic_slot_3 "-attack; slot3; autoheal_slot_3"
+
+bind "1" "medic_slot_1"
+bind "2" "medic_slot_2"
+bind "3" "medic_slot_3"
+
+alias v_1_1_1_slot1alias "medic_slot_1; r_drawviewmodel 1"
+alias v_1_1_1_slot2alias "medic_slot_2; r_drawviewmodel 1"
+alias v_1_1_1_slot3alias "medic_slot_3; r_drawviewmodel 1"
+alias v_1_1_1_slot1bind "bind 1 v_1_1_1_slot1alias"
+alias v_1_1_1_slot2bind "bind 2 v_1_1_1_slot2alias"
+alias v_1_1_1_slot3bind "bind 3 v_1_1_1_slot3alias"
+alias v_1_1_1_bind "v_1_1_1_slot1bind; v_1_1_1_slot2bind; v_1_1_1_slot3bind"
+
+alias v_0_0_0_slot1alias "medic_slot_1; r_drawviewmodel 0"
+alias v_0_0_0_slot2alias "medic_slot_2; r_drawviewmodel 0"
+alias v_0_0_0_slot3alias "medic_slot_3; r_drawviewmodel 0"
+alias v_0_0_0_slot1bind "bind 1 v_0_0_0_slot1alias"
+alias v_0_0_0_slot2bind "bind 2 v_0_0_0_slot2alias"
+alias v_0_0_0_slot3bind "bind 3 v_0_0_0_slot3alias"
+alias v_0_0_0_bind "v_0_0_0_slot1bind; v_0_0_0_slot2bind; v_0_0_0_slot3bind"
+
+alias v_1_0_0_slot1alias "medic_slot_1; r_drawviewmodel 1"
+alias v_1_0_0_slot2alias "medic_slot_2; r_drawviewmodel 0"
+alias v_1_0_0_slot3alias "medic_slot_3; r_drawviewmodel 0"
+alias v_1_0_0_slot1bind "bind 1 v_1_0_0_slot1alias"
+alias v_1_0_0_slot2bind "bind 2 v_1_0_0_slot2alias"
+alias v_1_0_0_slot3bind "bind 3 v_1_0_0_slot3alias"
+alias v_1_0_0_bind "v_1_0_0_slot1bind; v_1_0_0_slot2bind; v_1_0_0_slot3bind"
+
+alias v_0_1_0_slot1alias "medic_slot_1; r_drawviewmodel 0"
+alias v_0_1_0_slot2alias "medic_slot_2; r_drawviewmodel 1"
+alias v_0_1_0_slot3alias "medic_slot_3; r_drawviewmodel 0"
+alias v_0_1_0_slot1bind "bind 1 v_0_1_0_slot1alias"
+alias v_0_1_0_slot2bind "bind 2 v_0_1_0_slot2alias"
+alias v_0_1_0_slot3bind "bind 3 v_0_1_0_slot3alias"
+alias v_0_1_0_bind "v_0_1_0_slot1bind; v_0_1_0_slot2bind; v_0_1_0_slot3bind"
+
+alias v_0_0_1_slot1alias "medic_slot_1; r_drawviewmodel 0"
+alias v_0_0_1_slot2alias "medic_slot_2; r_drawviewmodel 0"
+alias v_0_0_1_slot3alias "medic_slot_3; r_drawviewmodel 1"
+alias v_0_0_1_slot1bind "bind 1 v_0_0_1_slot1alias"
+alias v_0_0_1_slot2bind "bind 2 v_0_0_1_slot2alias"
+alias v_0_0_1_slot3bind "bind 3 v_0_0_1_slot3alias"
+alias v_0_0_1_bind "v_0_0_1_slot1bind; v_0_0_1_slot2bind; v_0_0_1_slot3bind"
+
+alias v_0_1_1_slot1alias "medic_slot_1; r_drawviewmodel 0"
+alias v_0_1_1_slot2alias "medic_slot_2; r_drawviewmodel 1"
+alias v_0_1_1_slot3alias "medic_slot_3; r_drawviewmodel 1"
+alias v_0_1_1_slot1bind "bind 1 v_0_1_1_slot1alias"
+alias v_0_1_1_slot2bind "bind 2 v_0_1_1_slot2alias"
+alias v_0_1_1_slot3bind "bind 3 v_0_1_1_slot3alias"
+alias v_0_1_1_bind "v_0_1_1_slot1bind; v_0_1_1_slot2bind; v_0_1_1_slot3bind"
+
+alias v_1_0_1_slot1alias "medic_slot_1; r_drawviewmodel 1"
+alias v_1_0_1_slot2alias "medic_slot_2; r_drawviewmodel 0"
+alias v_1_0_1_slot3alias "medic_slot_3; r_drawviewmodel 1"
+alias v_1_0_1_slot1bind "bind 1 v_1_0_1_slot1alias"
+alias v_1_0_1_slot2bind "bind 2 v_1_0_1_slot2alias"
+alias v_1_0_1_slot3bind "bind 3 v_1_0_1_slot3alias"
+alias v_1_0_1_bind "v_1_0_1_slot1bind; v_1_0_1_slot2bind; v_1_0_1_slot3bind"
+
+alias v_1_1_0_slot1alias "medic_slot_1; r_drawviewmodel 1"
+alias v_1_1_0_slot2alias "medic_slot_2; r_drawviewmodel 1"
+alias v_1_1_0_slot3alias "medic_slot_3; r_drawviewmodel 0"
+alias v_1_1_0_slot1bind "bind 1 v_1_1_0_slot1alias"
+alias v_1_1_0_slot2bind "bind 2 v_1_1_0_slot2alias"
+alias v_1_1_0_slot3bind "bind 3 v_1_1_0_slot3alias"
+alias v_1_1_0_bind "v_1_1_0_slot1bind; v_1_1_0_slot2bind; v_1_1_0_slot3bind"
+
+alias v_reset_slot1bind "bind 1 slot1"
+alias v_reset_slot2bind "bind 2 slot2"
+alias v_reset_slot3bind "bind 3 slot3"
+alias v_reset_bind "v_reset_slot1bind; v_reset_slot2bind; v_reset_slot3bind"
+
+alias +v_flash_slot1 "slot1; r_drawviewmodel 1"
+alias -v_flash_slot1 "r_drawviewmodel 0"
+alias +v_flash_slot2 "slot2; r_drawviewmodel 1"
+alias -v_flash_slot2 "r_drawviewmodel 0"
+alias +v_flash_slot3 "slot3; r_drawviewmodel 1"
+alias -v_flash_slot3 "r_drawviewmodel 0"
+
+alias v_1_1_1 "v_1_1_1_bind" //All on
+alias v_0_0_0 "v_0_0_0_bind" //All off
+
+alias v_1_0_0 "v_1_0_0_bind" //Only primary on
+alias v_0_1_0 "v_0_1_0_bind" //Only secondary on
+alias v_0_0_1 "v_0_0_1_bind" //Only melee on
+
+alias v_0_1_1 "v_0_1_1_bind" //Only primary off
+alias v_1_0_1 "v_1_0_1_bind" //Only secondary off
+alias v_1_1_0 "v_1_1_0_bind" //Only melee off
+
+alias v_reset "v_reset_bind" //Resets the binds
