--- a/cfg/okai/engineer.cfg
+++ b/cfg/okai/engineer.cfg
@@ -2,10 +2,11 @@
 exec ./okai/engineer_aliases
 
 //Console variables that can change
-viewmodel_fov 95
+viewmodel_fov 90
 sensitivity 3.59
 cl_autoreload 1
 r_drawviewmodel 1
+cl_interp .033
 
 //Executing the binds
 exec ./okai/engineer_binds
