--- a/cfg/okai/medic_aliases.cfg
+++ b/cfg/okai/medic_aliases.cfg
@@ -7,3 +7,10 @@ alias "-radar" "autocall_default"
 //Autoheal on/off
 alias "autoheal_1" "exec ./okai/autoheal_on"
 alias "autoheal_0" "exec ./okai/autoheal_off"
+
+//fake uber
+alias fakeuber_chat "say_team ██████ FAKED UBER/KRITZ ███████"
+alias fakeuber "fakeuber_chat; voicemenu 1 7"
+
+alias +uberpop "+attack2; say_team ██████ UBER/KRITZ POPPED ██████"
+alias -uberpop "-attack2"
