--- a/cfg/okai/scout.cfg
+++ b/cfg/okai/scout.cfg
@@ -2,10 +2,11 @@
 exec ./okai/scout_aliases
 
 //Console variables that can change
-viewmodel_fov 95
+viewmodel_fov 90
 sensitivity 2.7
 cl_autoreload 1
 r_drawviewmodel 0
+cl_interp .033
 
 //Executing the binds
 exec ./okai/scout_binds
