--- a/cfg/okai/sniper_binds.cfg
+++ b/cfg/okai/sniper_binds.cfg
@@ -25,7 +25,7 @@ bind "r" "+reload"
 bind "t" "impulse 201"
 bind "y" "say"
 bind "u" "say_team"
-bind "i" ""
+bind "i" "say Well played!"
 bind "o" ""
 bind "p" ""
 bind "a" "+moveleft"
@@ -112,8 +112,8 @@ bind "F12" "toggle r_drawviewmodel"
 //The keys above arrows
 bind "INS" "wait_check" // Insert
 bind "HOME" "remove_red_ammo" // Home
-bind "PGUP" "" // Page Up
-bind "DEL" "" // Delete
+bind "PGUP" "reload_cfg" // Page Up
+bind "DEL" "voice_toggle" // Delete
 bind "END" "" // End
 bind "PGDN" "" // Page Down
 bind "NUMLOCK" "" // Pause Break/numlock
