--- a/cfg/okai/spy_binds.cfg
+++ b/cfg/okai/spy_binds.cfg
@@ -12,8 +12,8 @@ bind "9" "slot9"
 
 //Mouse
 bind "MOUSE1" "+attack"
-bind "MOUSE2" "+attack2"
-bind "MOUSE3" ""
+bind "MOUSE2" "+watch"
+bind "MOUSE3" "toggle r_drawviewmodel"
 bind "MWHEELUP" "voicemenu 1 1"
 bind "MWHEELDOWN" "voicemenu 0 1"
 
@@ -25,13 +25,13 @@ bind "r" "+reload"
 bind "t" "impulse 201"
 bind "y" "say"
 bind "u" "say_team"
-bind "i" ""
+bind "i" "say Well played!"
 bind "o" ""
 bind "p" ""
 bind "a" "+moveleft"
 bind "s" "+back"
 bind "d" "+moveright"
-bind "f" ""
+bind "f" "r_drawviewmodel 0"
 bind "g" "+taunt"
 bind "h" "+use_action_slot_item"
 bind "j" "prec_mark"
@@ -112,8 +112,8 @@ bind "F12" "toggle r_drawviewmodel"
 //The keys above arrows
 bind "INS" "wait_check" // Insert
 bind "HOME" "remove_red_ammo" // Home
-bind "PGUP" "" // Page Up
-bind "DEL" "" // Delete
+bind "PGUP" "reload_cfg" // Page Up
+bind "DEL" "voice_toggle" // Delete
 bind "END" "" // End
 bind "PGDN" "" // Page Down
 bind "NUMLOCK" "" // Pause Break/numlock
