--- a/cfg/okai/vmsettings.cfg
+++ b/cfg/okai/vmsettings.cfg
@@ -88,4 +88,15 @@ alias v_1_1_0 "v_1_1_0_bind" //Only melee off
 
 alias v_reset "v_reset_bind" //Resets the binds
 
-alias v_flash "bind 1 +v_flash_slot1; bind 2 +v_flash_slot2; bind 3 +v_flash_slot3"
+alias v111 "v_1_1_1" //All on SHORT
+alias v000 "v_0_0_0" //All off SHORT
+
+alias v100 "v_1_0_0" //Only primary on SHORT
+alias v010 "v_0_1_0" //Only secondary on SHORT
+alias v001 "v_0_0_1" //Only melee on SHORT
+
+alias v011 "v_0_1_1" //Only primary off SHORT
+alias v101 "v_1_0_1" //Only secondary off SHORT
+alias v110 "v_1_1_0" //Only melee off SHORT
+
+alias vreset "v_reset" //Resets the binds SHORT
